--- a/운영체제_쉬운코드/[10강] 꼬리 질문.md
+++ b/운영체제_쉬운코드/[10강] 꼬리 질문.md
@@ -3,10 +3,11 @@
 <br/><br/>
 
 ## 2. **시스템 콜도 인터럽트의 한 종류라고 볼 수 있는가?**
+(참고: https://baebalja.tistory.com/m/354)
 
 ### 인터럽트
 
-: CPU가 프로그램을 실행하고 있을 때, 입출력 하드웨어 등의 장치에 예외상황이 발생하여 처리가 필요할 경우에 CPU에게 알려 처리할 수 있도록 하는 것
+> CPU가 프로그램을 실행하고 있을 때, 입출력 하드웨어 등의 장치에 예외상황이 발생하여 처리가 필요할 경우에 CPU에게 알려 처리할 수 있도록 하는 것
 
 <br/>
 
@@ -32,8 +33,8 @@
 **처리 과정:**
 
 1. CPU는 인터럽트를 감지하면 모든 작업을 중단
-2. 중단된 작업의 위치(PC), 레지스터 상태 등을 스택에 저장
-3. 인터럽트 디스크립터 테이블에서 감지된 인터럽트를 위한 ISR을 찾아 점프하여 수행
+2. 중단된 작업의 위치(PC), 레지스터 상태 등을 PCB에 저장
+3. 발생한 인터럽트를 위한 ISR가 저장된 주소를 IDT에서 찾아 점프하여 수행
     - IDT(Interrupt Descriptor Table): 인터럽트 혹은 exception 핸들러들의 정보를 저장하는 구조체
     - ISR(Interrupt Service Routine): 인터럽트 처리를 위한 프로그램
 4. 처리가 끝나면 ISR의 반환 값과 함께 스택에 저장했던 작업 상태를 복구하고 작업을 다시 실행
@@ -46,13 +47,24 @@
 
   → 인터럽트가 컨트롤러 등 하드웨어 장치에 의해 CPU 외부에서 발생
 
-- 소프트웨어 인터럽트(Softwear Interrupt) = 트랩(trap)
+    - 종류
+        - 타이머 인터럽트
+            - 프로세스/스레드가 할당된 CPU time을 모두 사용했을 때 발생
+
+              → 컨텍스트 스위칭이 일어남
+
+        - I/O 인터럽트
+            - 입출력 장치에 의해서 발생
+        - 전원 이상 인터럽트
+- 소프트웨어 인터럽트(Softwear Interrupt)
 
   → 인터럽트가 CPU에서 돌아가고 있는 프로그램에 의해 CPU 내부에서 발생
 
     - 종류
         - 예외(Exception)
-            - 비정상적인 작업 시도
-            - 메모리 바깥 접근 등 권한 없는 작업 시도할 때 발생
+            - 비정상적인 작업 시도나 메모리 바깥 접근 등 권한 없는 작업 시도할 때 발생
+
+              → CPU가 명령어를 수행하다가 처리할 수 없는 예외상황을 만나면 자기 자신을 인터럽트 걸어서 커널의 처리루틴으로 점프
+
         - 시스템 콜(System Call)
             - 사용자 프로그램이 운영체제 내부에 정의된 코드를 실행하고 싶을 때 운영체제에 서비스 요청
